k8s/ingress/ingress.dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-dev
spec:
  ingressClassName: nginx
  rules:
    - host:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 3000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-service
                port:
                  number: 8000
